--- a/index.html
+++ b/index.html
@@ -5,25 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Senac São Miguel Paulista</title>
-
-    <style>
-        li{
-            list-style-type: none;
-            border-style: solid;
-            border-width: 1px ;
-            border-color: white;
-            background-color: cornflowerblue;
-            text-align: center;
-            width: 150px;
-            /* Se quiser que cada item fique lado a lado */
-            /* float: left; */
-        }
-    </style>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 
     <header>
-        <img src="imagens/logo.png" alt="Logo do Senac">
+        <img class="index" src="imagens/logo.png">
         <h1>São Miguel Paulista</h1>
         <hr>
     </header>
@@ -35,7 +22,6 @@
             <li><a href="estrutura.html">Nossa Estrutura</a></li>
             <li><a href="numeros.html">Nossos Números</a></li>
             <li><a href="unidades.html">Unidades</a></li>
-            <li><a href="contato.html">Contato</a></li>
         </ol>
     </nav>
 </body>
