--- a/numeros.html
+++ b/numeros.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nossos Números</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 
@@ -13,7 +14,7 @@
 
     <h1>Nossos Números</h1>
     
-    <h3>Nossos números de 2021</h3>
+    
     <table width="90%" border="1">
         <tbody>
             <tr>
