--- a/unidades.html
+++ b/unidades.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unidades</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 
     <img src="imagens/logo.png" alt="Logo do Senac">
     <hr>
 
-    <h1>Unidades</h1>
+
+    <h1><p id="ModeloCaixa">Unidade</p></h1>
     
     <table width="90%" border="1">
         <thead>
@@ -19,7 +21,7 @@
                 <th colspan="7">Unidades Senac no Estado de São Paulo</th>
             </tr>
             <tr>
-                <th colspan="2">Unidade</th>
+                <th>colspan="2"><h2>Unidade</h2></th>
                 <th>Endereço</th>
                 <th>Bairro</th>
                 <th>Cidade</th>
@@ -29,8 +31,8 @@
         </thead>
         <tbody>
             <tr>
-                <td rowspan="8">Capital</td>
-                <td>Aclimação</td>
+                <td rowspan="8"><h2>Capital</td>
+                <td>>Aclimação</td>
                 <td>Rua Pires da Mota, 838</td>
                 <td>Aclimação</td>
                 <td>São Paulo</td>
@@ -42,11 +44,11 @@
                 <td>Av. Itaquera, 8266</td>
                 <td>Itaquera</td>
                 <td>São Paulo</td>
-                <td>(11) 2185-9200</td>
+                <td><a href=""></a>(11) 2185-9200</td>
                 <td><a href="#" target="_blank"><img src="icones/pin.png" alt="como chegar"></a></td>
             </tr>
             <tr>
-                <td>Jabaquara</td>
+                <td><Jabaquara</td>
                 <td>Av. do Café, 298</td>
                 <td>Jabaquara</td>
                 <td>São Paulo</td>
